<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/startFragment">
    <fragment
        android:id="@+id/startFragment"
        android:name="com.example.pizza.StartFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_start">
        <action
            android:id="@+id/action_startFragment_to_toppingFragment"
            app:destination="@id/toppingFragment" />
    </fragment>
    <fragment
        android:id="@+id/toppingFragment"
        android:name="com.example.pizza.ToppingFragment"
        android:label="@string/choose_topping"
        tools:layout="@layout/fragment_topping">
        <action
            android:id="@+id/action_toppingFragment_to_startFragment"
            app:destination="@id/startFragment"
            app:popUpTo="@id/startFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_toppingFragment_to_pickupFragment"
            app:destination="@id/pickupFragment" />
    </fragment>

    <fragment
        android:id="@+id/pickupFragment"
        android:name="com.example.pizza.PickupFragment"
        android:label="@string/choose_pickup_date"
        tools:layout="@layout/fragment_pickup">
        <action
            android:id="@+id/action_pickupFragment_to_summaryFragment"
            app:destination="@id/summaryFragment" />
        <action
            android:id="@+id/action_pickupFragment_to_startFragment"
            app:destination="@id/startFragment"
            app:popUpTo="@id/startFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/summaryFragment"
        android:name="com.example.pizza.SummaryFragment"
        android:label="@string/order_summary"
        tools:layout="@layout/fragment_summary">
        <action
            android:id="@+id/action_summaryFragment_to_startFragment"
            app:destination="@id/startFragment"
            app:popUpTo="@id/startFragment"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>